<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: DerpFest AOSP
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/misc_title" >

    <org.derpfest.support.preferences.GlobalSettingSwitchPreference
        android:key="window_ignore_secure"
        android:title="@string/ignore_window_secure_title"
        android:summary="@string/ignore_window_secure_summary"
        android:defaultValue="false" />

    <org.derpfest.support.preferences.SystemSettingSwitchPreference
        android:key="qs_compact_media_player_mode"
        android:title="@string/qs_compact_media_player_mode_title"
        android:summary="@string/qs_compact_media_player_mode_summary"
        android:defaultValue="false"  />

    <PreferenceCategory
        android:title="@string/spoofing_title"
        android:summary="@string/spoofing_title_summary">

        <org.derpfest.support.preferences.SystemPropertySwitchPreference
            android:key="persist.sys.pixelprops.gphotos"
            android:title="@string/use_photos_spoof_title"
            android:summary="@string/use_photos_spoof_summary"
            android:defaultValue="true" />

        <org.derpfest.support.preferences.SystemPropertySwitchPreference
            android:key="persist.sys.pixelprops.netflix"
            android:title="@string/netflix_spoof_title"
            android:summary="@string/netflix_spoof_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
